Spotify auth stage 2 done,  graphql API bug: resource not found

--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,6 +1,6 @@
 projects:
   reactamplified:
-    schemaPath: amplify/backend/api/reactamplified/build/schema.graphql
+    schemaPath: amplify\backend\api\reactamplified\schema.graphql
     includes:
       - src/graphql/**/*.js
     excludes:
