new environment - develop addRegisteredUser function  added - creates new entry in graphqlAPI default table (User-develop) createUserProfile function deleted
Please enter the commit message for your changes. Lines starting

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -32,17 +32,16 @@
     }
   },
   "function": {
-    "createUserProfile": {
+    "addRegisteredUser": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
       "dependsOn": [
         {
-          "category": "storage",
-          "resourceName": "userProfile",
+          "category": "api",
+          "resourceName": "reactamplified",
           "attributes": [
-            "Name",
-            "Arn"
+            "GraphQLAPIIdOutput"
           ]
         }
       ]
