graphql schema updated - base table MusicTaste added, global secondary index added TODO: sorting queries to api sync cloudwatch with lambda - fetch last 3 updated users top artists every hour matching ppl ?

--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -3,6 +3,7 @@ projects:
     schemaPath: amplify\backend\api\reactamplified\schema.graphql
     includes:
       - src/graphql/**/*.js
+      - aws_directives.graphql
     excludes:
       - ./amplify/**
     extensions:
