--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,7 +25,12 @@
       "customAuth": false
     }
   },
-  "storage": {},
+  "storage": {
+    "favmusic": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
+    }
+  },
   "function": {
     "addRegisteredUser": {
       "build": true,
