epic bugfixes, api schema rebuild

--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,9 +1,8 @@
 projects:
   reactamplified:
-    schemaPath: amplify\backend\api\reactamplified\schema.graphql
+    schemaPath: amplify/backend/api/reactamplified/build/schema.graphql
     includes:
       - src/graphql/**/*.js
-      - aws_directives.graphql
     excludes:
       - ./amplify/**
     extensions:
