--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-spotify-player": "^1.0.4",
     "spotify-web-api-js": "^1.5.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.0"
